--- a/nosql.tex
+++ b/nosql.tex
@@ -43,8 +43,12 @@
 		\textbf {DOCENTE}\\
 		\large Mag. Patrick Cuadros Quiroga\\
 		
-		\textbf {ALUMNO}\\
-		\large Limache Victorio, V\'ictor Piero - 2017057857 \\
+		\textbf {INTEGRANTES}\\
+		\large Limache Victorio, V\'ictor Piero  \\
+		\large Sanchez Rodriguez, Bayron  \\
+		\large Tarqui Montalico, Risther  \\
+		\large Callata Flores, Rafael \\
+		\large Liendo Velasquez, Joaquin \\
 		
 	\end{center}
 	
